@startuml
state "Đang học" as Active
state "Chờ lưu trữ" as PendingArchive
state "Đã lưu trữ" as Archived
[*] --> Active
Active --> PendingArchive : Nghỉ học còn công nợ
Active --> Archived : Nghỉ học không còn công nợ
PendingArchive --> Archived : Công nợ bằng 0 và lưu trữ
Archived --> Active : Học lại
@enduml
